# BarcodeLabelGen

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users.py  0002_templates_formats_assets.py  0003_datasets.py  0004_custom_label_format.py  0005_sqlite_dataset_source.py  0006_asset_sha256.py  0007_devices_print_jobs.py  0008_captures.py  0009_folders.py  0010_folder_color_featured_image.py  0011_template_versions.py  0012_generated_files.py
backend/app/: __init__.py  api_helpers.py  config.py  extensions.py  factory.py  version.py  wsgi.py
backend/app/auth/: csrf.py  decorators.py  device.py  password.py
backend/app/cli/: qa.py  seed.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  asset.py  capture.py  dataset.py  device.py  folder.py  generated_file.py  label_format.py  print_job.py  template.py  template_version.py  user.py
backend/app/routes/: admin.py  agent.py  assets.py  auth.py  barcodes.py  captures.py  datasets.py  devices.py  folders.py  generate.py  health.py  history.py  library.py  me.py  print_jobs.py  templates.py  tspl.py  zpl.py
backend/app/schemas/: auth.py  dataset.py  device.py  template.py  types.py  user.py
backend/app/services/: assets.py  barcodes.py  batch_render.py  captures.py  datasets.py  devices.py  folders.py  generated_files.py  jobs.py  pdf_renderer.py  placeholders.py  print_jobs.py  sqlite_source.py  template_versions.py  templates.py  templates_io.py  users.py
backend/app/services/tspl/: __init__.py  generator.py
backend/app/services/zpl/: __init__.py  batch.py  detect.py  fonts.py  generator.py  parser.py  units.py  validate.py
backend/tests/: conftest.py  test_admin_endpoints.py  test_agent_endpoints.py  test_assets_endpoints.py  test_auth_endpoints.py  test_barcodes.py  test_batch_render.py  test_captures_endpoints.py  test_datasets.py  test_devices_endpoints.py  test_folders_endpoints.py  test_generate_dates.py  test_health.py  test_history_endpoints.py  test_password.py  test_pdf_renderer.py  test_placeholders.py  test_sqlite_source.py  test_tables.py  test_template_versions.py  test_templates_endpoints.py  test_templates_io.py  test_tspl.py  test_tspl_endpoints.py  test_users_service.py  test_version_sync.py  test_zpl.py  test_zpl_endpoints.py  test_zpl_validate.py
connector/: README.md  build-all.sh  capture.go  client.go  config.go  connector_test.go  go.mod  go.sum  install-capture-cups.sh  localapi.go  localprint_unix.go  localprint_windows.go  localprinters.go  (+5 more)
(+121 files in other folders)
