[project]
name = "barcodelabelgen-backend"
version = "0.1.0"
description = "BarcodeLabelGen — Flask REST API backend"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.3",
    "redis>=5.2.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-flask>=1.3.0",
    "types-redis>=4.6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "C4", "RET", "SIM", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ANN"]  # asserts and untyped fixtures OK in tests

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = [".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
