[project]
name = "barcodelabelgen-backend"
version = "0.17.0"
description = "BarcodeLabelGen — Flask REST API backend"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.3",
    "redis>=5.2.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "flask-login>=0.6.3",
    "flask-session>=0.8.0",
    "argon2-cffi>=23.1.0",
    "pydantic[email]>=2.10.4",
    "click>=8.1.7",
    "pillow>=11.0.0",
    "python-barcode>=0.15.1",
    "qrcode[pil]>=8.0",
    "reportlab>=4.2.5",
    "pandas>=2.2.3",
    "python-dateutil>=2.9",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.4",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-flask>=1.3.0",
    "types-redis>=4.6.0",
    "fakeredis>=2.26.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "C4", "RET", "SIM", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ANN"]  # asserts and untyped fixtures OK in tests
"app/cli/qa.py" = ["S108", "ANN"]  # /tmp paths and broader types fine in QA tool

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# Flask + Flask-Login decorators are typed loosely; we accept the trade-off
# to keep handler signatures clean.
disallow_untyped_decorators = false
exclude = [".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
